fix header z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,7 +72,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 4;
 }
 
 .site-logo {
